Logging tweak & updated checkRoute API spec
